# MLOPS_final_Project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  config.yaml  data.dvc  outputs.dvc  requirements.txt
.dvc/: config
.github/workflows/: test.txt  tests.yml  workflow_containers.yml  workflow_tests.yaml  workflow_tests.yml
app/: main.py
data/processed/: tokenized_test.pkl
data/raw/: data.pkl  test_set.pkl  train_set.pkl
dockerfiles/: predict.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
logs/config/: 20240115112153980-startup.cfg  20240115113353901-shutdown.cfg
mlops_final_project/: LICENSE  Makefile  pyproject.toml
model_store/: local_deployment.py
models/: events.out.tfevents.1704810993.LAPTOP-BHMKPT3K.5484.0  events.out.tfevents.1704811108.LAPTOP-BHMKPT3K.3360.0  events.out.tfevents.1704811840.LAPTOP-BHMKPT3K.27884.0
monitoring/: data_drift.py  datasettt.csv
monitoring/reports/: data_drift_dataset_tests.html  data_integrity_dataset_tests.html
reports/: README.md  report.py
runs/Jan09_11-26-51_nb-alessia/: events.out.tfevents.1704796011.nb-alessia.12117.0
runs/Jan09_11-39-34_nb-alessia/: events.out.tfevents.1704796774.nb-alessia.8913.0
runs/Jan09_11-40-37_nb-alessia/: events.out.tfevents.1704796837.nb-alessia.15139.0
runs/Jan09_11-50-55_nb-alessia/: events.out.tfevents.1704797455.nb-alessia.17611.0
src/: __init__.py  predict_model.py  train_model.py
src/data/: make_dataset.py
src/models/: main.py  (+1 more)
tests/: __init__.py  test_make_dataset.py  test_train_model.py
wandb/: latest-run
(+51 files in other folders)
